--- a/Airflow/docker-compose.yaml
+++ b/Airflow/docker-compose.yaml
@@ -60,7 +60,7 @@ services:
     ports:
       - "8081:8081"
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8081/health"]
+      test: ["CMD", "curl", "--fail", "http://0.0.0.0:8081/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -75,7 +75,7 @@ services:
     <<: *airflow-common
     command: scheduler
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
+      test: ["CMD", "curl", "--fail", "http://0.0.0.0:8974/health"]
       interval: 30s
       timeout: 10s
       retries: 5
